--- a/style.css
+++ b/style.css
@@ -41,15 +41,16 @@ nav ul {
 }
 
 nav .left {
+  font-size: 1.2rem;
   position: absolute;
   top: 50%;
-  left: 12px;
-  transform: translateY(-84%);
+  left: 28px;
+  transform: translateY(-90%);
 }
 
 nav img {
   position: absolute;
-  left: 225px;
+  left: 6px;
   top: 6px;
   width: 60px;
 }
@@ -110,7 +111,9 @@ section {
 }
 
 .content h2 {
-  margin: 0.7rem 0 0.7rem 2rem;
+  margin: 0;
+  line-height: 3rem;
+  text-align: center;
   font-size: 2rem;
 }
 
@@ -177,4 +180,9 @@ h3,
 
 #skills {
 
+}
+
+#contact h3 {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
