--- a/style.css
+++ b/style.css
@@ -201,9 +201,10 @@ h4,
 }
 
 .display {
+  height: 500px;
   position: relative;
-  display: inline-block;
   overflow: hidden;
+  text-align: center;
 }
 
 .spotlight {
@@ -215,6 +216,7 @@ h4,
 }
 
 .project img {
+  display: inline-block;
   max-width: 100%;
   max-height: 100%;
 }
