--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ section p {
 header {
   position: fixed;
   top: 0;
+  left: 0;
   z-index: 10;
   width: 100%;
   height: 3rem;
@@ -32,7 +33,6 @@ header {
 
 nav {
   width: 100%;
-  margin: 0 auto;
 }
 
 nav ul {
@@ -50,9 +50,9 @@ nav .left {
 
 nav img {
   position: absolute;
-  left: 6px;
-  top: 6px;
-  width: 60px;
+  top: 0;
+  left: 0;
+  height: 60px;
 }
 
 nav .right {
@@ -328,7 +328,6 @@ h4,
 
 #contact .social-links {
   margin: 1rem auto;
-  width: 500px;
   text-align: center;
 }
 
