--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ section {
   padding: 1rem;
 }
 
+section:nth-of-type(1) {
+  margin-top: 0;
+}
+
 .content {
   margin-top: 2.5rem;
   background-color: rgba(10, 10, 0, 0.8);
@@ -153,7 +157,7 @@ h4,
 
 #top .content {
   background: transparent;
-  padding-top: 3.5rem;
+  padding-top: 3rem;
   font-size: 2.5rem;
   line-height: 1.2rem;
 }
