--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ h4,
 }
 
 #top {
+  display: flex;
+  flex-flow: column;
   height: 100vh;
 }
 
@@ -160,6 +162,7 @@ h4,
   padding-top: 3rem;
   font-size: 2.5rem;
   line-height: 1.2rem;
+  height: 95vh;
 }
 
 #top p {
@@ -179,7 +182,6 @@ h4,
 	font-size: 0.8rem;
 	padding: 0 0.3rem;
 	border-radius: 0.3rem;
-	color: white;
 }
 
 #photo-credit img {
@@ -187,6 +189,44 @@ h4,
   height: 17px;
   margin-bottom: 0.25em;
   vertical-align: middle;
+}
+
+@keyframes grow-shrink {
+  from {
+    transform: scale(1.2);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+#arrow-down {
+  transition: all 0.4s ease;
+  display: block;
+  position: relative;
+  bottom: 0;
+  margin: 0 auto;
+  width: 1.4rem;
+  height: 3.5rem;
+
+  /* Animate grow-shrink */
+  animation-duration: 0.5s;
+  animation-name: grow-shrink;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+#arrow-down:hover {
+  transition: all 0.3s ease;
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+#arrow-down img {
+  transform: rotate(-90deg);
+  width: 100%;
+  height: 100%;
 }
 
 #about .content img {
