--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@ html {
   font-size: 20px;
   color: yellow;
   background: url(images/Tiomila2015.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
 }
 
@@ -25,8 +22,6 @@ header {
   width: 100%;
   height: 3rem;
   background: -webkit-linear-gradient(#404040, #151515);
-  background: -moz-linear-gradient(#404040, #151515);
-  background: -o-linear-gradient(#404040, #151515);
   background: linear-gradient(#404040, #151515);
   background-color: #404040;
 }
@@ -45,7 +40,8 @@ nav .left {
   position: absolute;
   top: 50%;
   left: 28px;
-  transform: translateY(-90%);
+  -webkit-transform: translateY(-90%);
+          transform: translateY(-90%);
 }
 
 nav img {
@@ -59,7 +55,8 @@ nav .right {
   position: absolute;
   top: 50%;
   right: 12px;
-  transform: translateY(-84%);
+  -webkit-transform: translateY(-84%);
+          transform: translateY(-84%);
 }
 
 nav ul li {
@@ -70,6 +67,7 @@ nav ul li {
 nav a {
   padding: 0.4rem;
   line-height: 3rem;
+  -webkit-transition: color 1s ease;
   transition: color 1s ease;
   color: #9d9d9d;
 }
@@ -82,6 +80,7 @@ nav a:visited {
 
 nav a:hover,
 nav a:active {
+  -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
   color: #e3e3e3;
 }
@@ -95,6 +94,7 @@ a:link {
 
 a:hover,
 a:active {
+  -webkit-transition: text-decoration 0.5s ease;
   transition: text-decoration 0.5s ease;
   color: white;
   text-decoration: underline;
@@ -152,8 +152,11 @@ h4,
 }
 
 #top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column;
+  -ms-flex-flow: column;
+      flex-flow: column;
   height: 100vh;
 }
 
@@ -191,17 +194,32 @@ h4,
   vertical-align: middle;
 }
 
-@keyframes grow-shrink {
+@-webkit-keyframes grow-shrink {
   from {
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
 
   to {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes grow-shrink {
+  from {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
 #arrow-down {
+  -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
   display: block;
   position: relative;
@@ -211,20 +229,27 @@ h4,
   height: 3.5rem;
 
   /* Animate grow-shrink */
-  animation-duration: 0.5s;
-  animation-name: grow-shrink;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-name: grow-shrink;
+          animation-name: grow-shrink;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
 }
 
 #arrow-down:hover {
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   cursor: pointer;
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 #arrow-down img {
-  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
   width: 100%;
   height: 100%;
 }
@@ -311,22 +336,29 @@ h4,
   height: 100%;
   width: 10%;
   cursor: pointer;
+  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   background-color: rgba(0, 10, 0, 0);
 }
 
 .arrow:hover {
+  -webkit-transition: all 0.2s ease-in-out,
+              background-color 0.6s;
   transition: all 0.2s ease-in-out,
               background-color 0.6s;
   background-color: rgba(0, 10, 0, 0.6);
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 .arrow-next:hover {
+  -webkit-transition: all 0.2s ease-in-out,
+              background-color 0.6s;
   transition: all 0.2s ease-in-out,
               background-color 0.6s;
   background-color: rgba(0, 10, 0, 0.6);
-  transform: scale(1.5) rotateY(180deg);
+  -webkit-transform: scale(1.5) rotateY(180deg);
+          transform: scale(1.5) rotateY(180deg);
 }
 
 .arrow-prev {
@@ -335,7 +367,8 @@ h4,
 
 .arrow-next {
   right: 0;
-  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 /* ------------------------------- END SHOWCASE ------------------------------*/
@@ -391,13 +424,21 @@ h4,
 #contact .social-links a img {
   width: 100px;
   margin: 25px;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
-  transform: scale(1);
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 #contact .social-links a img:hover {
+  -webkit-transition: -webkit-transform 0.15s ease;
+  transition: -webkit-transform 0.15s ease;
   transition: transform 0.15s ease;
-  transform: scale(1.2);
+  transition: transform 0.15s ease, -webkit-transform 0.15s ease;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 /* ---------------------------- END CONTACT-SECTION ------------------------- */
