--- a/style.css
+++ b/style.css
@@ -28,20 +28,26 @@ header {
 
 nav {
   width: 100%;
+  height: 100%;
+  margin-top: -10px;
 }
 
 nav ul {
+  height: 60px;
   display: inline;
-  height: 3rem;
+  float: right;
+  margin: 0;
 }
 
 nav .left {
   font-size: 1.2rem;
-  position: absolute;
+  float: left;
+  margin-left: 1.5rem;
+  /*position: absolute;
   top: 50%;
   left: 28px;
   -webkit-transform: translateY(-90%);
-          transform: translateY(-90%);
+          transform: translateY(-90%);*/
 }
 
 nav img {
@@ -51,13 +57,13 @@ nav img {
   height: 60px;
 }
 
-nav .right {
+/*nav .right {
   position: absolute;
   top: 50%;
   right: 12px;
   -webkit-transform: translateY(-84%);
           transform: translateY(-84%);
-}
+}*/
 
 nav ul li {
   display: inline;
@@ -66,7 +72,6 @@ nav ul li {
 
 nav a {
   padding: 0.4rem;
-  line-height: 3rem;
   -webkit-transition: color 1s ease;
   transition: color 1s ease;
   color: #9d9d9d;
@@ -483,6 +488,11 @@ h4,
 @media screen and (max-width: 800px) {
   body {
     font-size: 14px;  /* Unsure about this */
+  }
+
+  nav a {
+    font-size: 22px;
+    line-height: 3.5em;
   }
 
   section {
