--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
   left: 0;
   z-index: 10;
   width: 100%;
-  height: 3rem;
+  max-height: 100%;
   background: -webkit-linear-gradient(#404040, #151515);
   background: linear-gradient(#404040, #151515);
   background-color: #404040;
@@ -28,42 +28,30 @@ header {
 
 nav {
   width: 100%;
-  height: 100%;
-  margin-top: -10px;
+  height: 60px;
 }
 
 nav ul {
-  height: 60px;
   display: inline;
   float: right;
   margin: 0;
 }
 
-nav .left {
-  font-size: 1.2rem;
-  float: left;
-  margin-left: 1.5rem;
-  /*position: absolute;
-  top: 50%;
-  left: 28px;
-  -webkit-transform: translateY(-90%);
-          transform: translateY(-90%);*/
-}
-
 nav img {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 60px;
+  float: left;
 }
 
-/*nav .right {
-  position: absolute;
-  top: 50%;
-  right: 12px;
-  -webkit-transform: translateY(-84%);
-          transform: translateY(-84%);
-}*/
+nav .left {
+  float: left;
+  font-size: 1.2rem;
+  margin-top: 0.8rem;
+  padding: 0;
+}
+
+nav .right {
+  margin-top: 1rem;
+}
 
 nav ul li {
   display: inline;
@@ -446,11 +434,7 @@ h4,
 
 /* ------------------------- ADAPT TO SMALLER SCREENS ----------------------- */
 
-@media screen and (max-width: 1300px) {
-  body {
-    font-size: 18px;
-  }
-
+/*@media screen and (max-width: 1300px) {
   section {
     width: 80vw;
   }
@@ -490,10 +474,10 @@ h4,
     font-size: 14px;  /* Unsure about this */
   }
 
-  nav a {
+  /*nav a {
     font-size: 22px;
     line-height: 3.5em;
-  }
+  }*/
 
   section {
     width: 95vw;
@@ -559,4 +543,4 @@ h4,
   #about-text {
     clear: both;
   }
-}
+}*/
