--- a/style.css
+++ b/style.css
@@ -92,15 +92,21 @@ nav a:active {
 }
 
 #toggle-menu {
+  border-top: 1px solid rgba(157,157,157, 0.4);
   display: none;
   list-style-type: none;
+  margin: 0;
+  padding: 1rem 0;
   text-align: center;
   font-size: 1.2rem;
-  margin: 1rem auto;
 }
 
 #toggle-menu li {
   margin-bottom: 1.5rem;
+}
+
+#toggle-menu li:nth-child(4) {
+  margin-bottom: 0;
 }
 
 a:visited,
