--- a/style.css
+++ b/style.css
@@ -451,14 +451,18 @@ h4,
 
 /* ------------------------------ CONTACT-SECTION --------------------------- */
 
-#contact .social-links {
+.social-links {
   margin: 1rem auto;
   text-align: center;
 }
 
-#contact .social-links a img {
-  width: 100px;
+.social-links a {
+  display: inline-block;
   margin: 25px;
+}
+
+.social-links a img {
+  width: 100px;
   -webkit-transition: -webkit-transform 0.5s ease;
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
@@ -467,7 +471,7 @@ h4,
           transform: scale(1);
 }
 
-#contact .social-links a img:hover {
+.social-links a img:hover {
   -webkit-transition: -webkit-transform 0.15s ease;
   transition: -webkit-transform 0.15s ease;
   transition: transform 0.15s ease;
@@ -691,5 +695,9 @@ h4,
 @media screen and (max-width: 380px) {
   .col {
     width: 80%;
+  }
+
+  .social-links a img {
+    width: 80px;
   }
 }
