--- a/style.css
+++ b/style.css
@@ -149,10 +149,10 @@ a:active {
 
 section {
   position: relative;
-  margin: 2rem auto;
+  margin: 2rem auto 2.5rem;
   width: 72%;
   max-width: 1300px;
-  padding: 1rem;
+  padding: 0.6rem 1rem 1rem;
 }
 
 section:nth-of-type(1) {
