Slightly decrease size of #arrow-down on small screens.

--- a/style.css
+++ b/style.css
@@ -675,6 +675,11 @@ h4,
   #top p {
     margin: 20px 0;
   }
+
+  #arrow-down {
+    height: 3rem;
+    width: 1.2rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
