--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ h4,
   left: 0;
   right: 0;
   width: 1.4rem;
-  height: 3.5rem;
+  height: 3.4rem;
 
   /* Animate grow-shrink */
   -webkit-animation-duration: 0.5s;
@@ -618,6 +618,11 @@ h4,
     float: left;
   }
 
+  #arrow-down {
+    height: 2.9rem;
+    width: 1.2rem;
+  }
+
   .right li {
     margin-right: 0;
   }
@@ -718,8 +723,8 @@ h4,
   }
 
   #arrow-down {
-    height: 3rem;
-    width: 1.2rem;
+    height: 2.5rem;
+    width: 1rem;
   }
 }
 
