--- a/src/style.css
+++ b/src/style.css
@@ -207,8 +207,10 @@ h4,
 #top {
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -ms-flex-flow: column;
+-webkit-flex-flow: column;
       flex-flow: column;
   height: 100vh;
 }
@@ -302,11 +304,13 @@ h4,
   transition: all 0.3s ease;
   cursor: pointer;
   -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
           transform: scale(1.2);
 }
 
 #arrow-down img {
   -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
           transform: rotate(-90deg);
   width: 100%;
   height: 100%;
@@ -408,6 +412,7 @@ h4,
               background-color 0.6s;
   background-color: rgba(0, 10, 0, 0.6);
   -webkit-transform: scale(1.5);
+      -ms-transform: scale(1.5);
           transform: scale(1.5);
 }
 
@@ -472,18 +477,22 @@ h4,
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
+          -webkit-justify-content: center;
           justify-content: center;
 }
 
 .social-links .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
+          -webkit-align-items: center;
           align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
 }
 
@@ -499,6 +508,7 @@ h4,
   transition: transform 0.5s ease;
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
   -webkit-transform: scale(1);
+      -ms-transform: scale(1);
           transform: scale(1);
 }
 
@@ -508,6 +518,7 @@ h4,
   transition: transform 0.15s ease;
   transition: transform 0.15s ease, -webkit-transform 0.15s ease;
   -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
           transform: scale(1.2);
 }
 
@@ -581,6 +592,7 @@ h4,
   .arrow-prev {
     background-color: rgba(0, 10, 0, 0.6);
     -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
             transform: scale(1.5);
   }
 
@@ -594,16 +606,21 @@ h4,
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
+            -webkit-flex-direction: column;
             flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
                 -ms-grid-row-align: center;
-            align-items: center;
+                  -webkit-box-align: center;
+                -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
   }
   .social-links .row {
     width: 40%;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
+            -webkit-justify-content: center;
             justify-content: center;
   }
   .social-links .row:first-child {
