--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,12 @@
 .header {
     position: sticky;
     top: 0;
+    z-index: 100;
     height: 4rem;
     display: grid;
     grid-template-columns: max-content auto minmax(auto, 400px);
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
     padding: 0 2rem;
     background: white;
     box-shadow: 0px 1px 2px #00000066;
@@ -16,7 +17,7 @@
 }
 
 .header a {
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-decoration: none;
     color: black;
     display: flex;
