--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,14 +6,19 @@
     display: grid;
     grid-template-columns: max-content auto minmax(auto, 400px);
     align-items: center;
-    gap: 1rem;
     padding: 0 2rem;
     background: white;
     box-shadow: 0px 1px 2px #00000066;
 }
 
-.site-title:nth-child(2) {
+.site-title {
+    display: flex;
     justify-content: start;
+    height: 100%;
+}
+
+.site-title a {
+    padding: 0 1rem;
 }
 
 .header a {
