--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,3 +1,27 @@
-.skills {
-    height: 300px;
+.skills-container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.skill {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    font-size: 1.2em;
+    text-shadow: 1px 1px #000;
+}
+
+.bar {
+    width: 100%;
+    height: 5px;
+    background: #bbb8b2;
+    border-radius: 2px;
+}
+
+.level {
+    background: #ff5714;
+    height: 100%;
+    border-radius: 2px;
 }
