--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -40,3 +40,10 @@ body {
     padding: 2rem;
     margin: 0 2rem;
 }
+
+.footer {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 1rem;
+}
