--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -35,10 +35,11 @@ body {
 }
 
 .content > section {
-    background: rgba(10, 10, 0, 0.8);
+    background: rgba(255, 255, 255, 0.9);
     text-align: center;
     padding: 2rem;
     margin: 0 2rem;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
