--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -10,7 +10,7 @@
     grid-template-rows: 1fr 1fr;
     align-items: center;
     font-size: 1.2em;
-    text-shadow: 1px 1px #000;
+    text-shadow: 1px 1px #bbb8b2;
 }
 
 .bar {
