--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -32,6 +32,7 @@ body {
         'skills'
         'contact';
     grid-gap: 2rem;
+    justify-content: center;
 }
 
 .content > section {
@@ -40,6 +41,7 @@ body {
     padding: 2rem;
     margin: 0 2rem;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.2);
+    max-width: 1100px;
 }
 
 .footer {
