Improve box-shadows and fix footer text color

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -4,4 +4,6 @@ section.intro {
     padding: 0;
     position: relative;
     background: transparent;
+    box-shadow: none;
+    max-width: none;
 }
