--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     padding: 0 2rem;
     background: white;
-    box-shadow: 0px 1px 2px #00000066;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
 }
 
 .site-title {
