--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -36,11 +36,11 @@ body {
 }
 
 .content > section {
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 255, 255, 0.97);
     text-align: center;
     padding: 2rem;
     margin: 0 2rem;
-    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     max-width: 1100px;
 }
 
@@ -49,4 +49,5 @@ body {
     justify-content: center;
     align-content: center;
     padding: 1rem;
+    color: #fff;
 }
