--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -15,15 +15,24 @@ section.intro {
     --intro-bg-transform: rotate3d(4, 1, 1, 0.04turn);
 }
 
-.intro-bg {
+.content {
     display: inline-block;
     position: relative;
     background: transparent;
 }
 
-.intro-bg::after {
-    content: '';
+.content h1 {
+    font-size: 2.6em;
+    margin-bottom: 0;
+}
+
+.content p {
+    margin: 0;
+}
+
+.intro-bg {
     position: absolute;
+    background: transparent;
     top: -0.5em;
     left: -1em;
     height: 130%;
@@ -33,39 +42,34 @@ section.intro {
     background: var(--orange);
 }
 
-.triangle {
+.triangles-container {
     position: absolute;
-    bottom: -1em;
+    bottom: 0.2em;
+    right: 0.2em;
+    display: flex;
+    justify-content: space-between;
+    width: 2.8em;
+    align-items: flex-end;
+}
+
+.triangle {
     z-index: -9;
-    transform: var(--intro-bg-transform);
     content: '';
     height: 0;
     width: 0;
 }
 
-.intro-bg .t1 {
-    right: -0.3em;
+.t1 {
     border-top: 1.1em solid #fff;
     border-right: 1.1em solid transparent;
 }
 
-.intro-bg .t2 {
-    right: 1.15em;
+.t2 {
     border-top: 0.8em solid #fff;
     border-right: 0.8em solid transparent;
 }
 
-.intro-bg .t3 {
-    right: 2.3em;
+.t3 {
     border-top: 0.5em solid #fff;
     border-right: 0.5em solid transparent;
-}
-
-.intro-bg h1 {
-    font-size: 2.6em;
-    margin-bottom: 0;
-}
-
-.intro-bg p {
-    margin: 0;
 }
