--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -51,10 +51,20 @@ body {
     margin: 0 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     max-width: 1100px;
+    min-height: calc(100vh - var(--header-height));
 }
 
 .content > section h2 {
     text-align: center;
+}
+
+/* Ensure anchor targets won't be hidden by the fixed header, by using the offset */
+.content > section h2::before {
+    display: block;
+    content: ' ';
+    margin-top: calc(-1 * var(--header-offset));
+    height: var(--header-offset);
+    visibility: hidden;
 }
 
 .footer {
